# fastmem

./: Cargo.toml  README.md
no_std_example/: Cargo.toml  README.md
no_std_example/.cargo/: config.toml
no_std_example/examples/: bench_alloc.rs  fail.rs  juggle.rs  log2.rs  log2_asm.rs  main.rs
no_std_example/src/: main.rs
src/: heap.rs  lib.rs  list.rs  my_box.rs  stack.rs
