[package]
name = "fastmem"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cortex-m-semihosting]
version = "0.5.0"

[features]
# tracing of freemem internals using semihosting on target
trace_semihost = []
