[package]
name = "no_std_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
cortex-m = "0.7.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.5.0"
lm3s6965 = "0.1.3"
panic-semihosting = "0.6.0"

# [dependencies.stm32f4xx-hal]
# version = "0.12.0"
# features = ["rt", "stm32f411"]

[dependencies.fastmem]
path = "../."

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
